getIntersectionList causes transforms to be recalculated in SVG https://bugs.webkit.org/show_bug.cgi?id=77179

Reviewed by Nikolas Zimmermann.

Introduce a local variable to store the element's local-to-parent
transformation matrix in, removing the need for the const_cast and
stopping us from modifying any matrices elsewhere.

Source/WebCore:

Test: svg/custom/intersection-list-transforms.svg

* rendering/svg/RenderSVGModelObject.cpp:
(WebCore::getElementCTM):

LayoutTests:

* svg/custom/intersection-list-transforms-expected.png: Added.
* svg/custom/intersection-list-transforms-expected.txt: Added.
* svg/custom/intersection-list-transforms.svg: Added.


Canonical link: https://commits.webkit.org/94418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106464 268f45cc-cd09-0410-ab3c-d52691b4dbfc